# ComfyUI_Spark_TTS

./: Model_Download.bat  NodeSparkTTS.py  README.md  __init__.py  manifest.json  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
Spark-TTS-Speakers/: speakers_info.json
model_download/: __init__.py  model_download.py  model_list.json
